src/objects/QPMS__Risk_Priority__c.object
<CustomObject>
    <description>This is a master object in Quality Central. The priority for addressing risk based on levels of severity and probability.</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>Describe actions/steps to follow for this priority level.</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QPMS__Module__c</fullName>
        <description>This field is used to store the module name</description>
        <label>Module</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>CAPA</fullName>
                </value>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>CNG</fullName>
                </value>
                <value>
                    <fullName>CMP</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Number__c</fullName>
        <description>Integer value representing risk priority.</description>
        <inlineHelpText>Risk Priority Number (RPN) assigns a value the a specific combination of severity and probability.</inlineHelpText>
        <label>Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Threshold_Action__c</fullName>
        <description>Actions to be automated for each priority level.  Each value must correspond to code and validation rules enforcing what is expressed in the value.</description>
        <inlineHelpText>Set the action to be take for this priority level.</inlineHelpText>
        <label>Threshold Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default to Yes CAPA Required</fullName>
                    <default>true</default>
                    <label>Default to Yes CAPA Required</label>
                </value>
                <value>
                    <fullName>Default to No CAPA Required</fullName>
                </value>
                <value>
                    <fullName>Force Yes CAPA Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Risk Priority</label>
    <listViews>
        <fullName>QPMS__All_Risk_Priorities</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Number__c</columns>
        <columns>QPMS__Module__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Risk Priorities</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Risk Priority</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Priorities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>